Changes for Filter Effects specification
----------------------------------------

2013-11-07  Dirk Schulze  <dschulze@adobe.com>
- Add informative references to security studies.
- Add detailed description of potential security risks by filter primitives.

2013-11-04  Dirk Schulze  <dschulze@adobe.com>
- Add href to feImage and clarify interaction with xlink:href (later deprecated now)
- Removed filterRes attribute after WG decision.

2013-10-31  Dirk Schulze  <dschulze@adobe.com>
- Resolve issues clarfied in SVG WG meetings on filter functions.

2013-10-07  Dirk Schulze  <dschulze@adobe.com>
- Add 'crossorigin' attribute to feImage.

2013-09-26  Dirk Schulze  <dschulze@adobe.com>
- Added validation guidance for custom shaders and extended security module.

2013-09-26  Dirk Schulze  <dschulze@adobe.com>
- First attempt to write the security section. This sections is currently work in progress.

2013-09-06  Dirk Schulze  <dschulze@adobe.com>
- Allow <string> in CSS image filter() function to match behavior on other CSS Images.

2013-08-31  Dirk Schulze  <dschulze@adobe.com>
- Added edgeMode attribute to feGaussianBlur
- Specify that edgeMode computes to 'none' for 'filter' property
  and 'duplicate' for filter() CSS Image function.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Replace SVGAnimatedColor with SVGAnimatedString.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Added clarification for 'color-interpolation-filters' property.

2013-08-26  Dirk Schulze  <dschulze@adobe.com>
- Added more issues to the spec.

2013-08-25  Dirk Schulze  <dschulze@adobe.com>
- Added more issues to the spec.

2013-08-23  Dirk Schulze  <dschulze@adobe.com>
- Clean-up.

2013-08-22  Dirk Schulze  <dschulze@adobe.com>
- Clean-up. Remove hint about performance increase because of security concerns.

2013-08-17  Dirk Schulze  <dschulze@adobe.com>
- Specify filter() image function and interpolation.

2013-08-14  Dirk Schulze  <dschulze@adobe.com>