@@ -1,6 +1,9 @@
 Changes for Filter Effects specification
 ----------------------------------------
 
+2013-11-10  Dirk Schulze  <dschulze@adobe.com>
+- Defer issue about filtering multiple levels to a later spec.
+
 2013-11-07  Dirk Schulze  <dschulze@adobe.com>
 - Add informative references to security studies.
 - Add detailed description of potential security risks by filter primitives.
